✨Projeto atualizado com testes de performance com o k6.
